# helios

./: .gitignore  CLAUDE.md  CMakeLists.txt
.cache/clangd/index/: gen_grid.cc.6BDDFEECB1D1D940.idx  gen_metastable.cc.13A067525DE143F6.idx  gen_random_graph.cc.8BACCC31C19B1128.idx  io.cc.E8BEF7A63B354C82.idx  linear_op.cc.BB924F72809C7BAB.idx  mdp.h.C026A27ACE43C57D.idx  metrics.cc.9B8C1DCACB4B0DD4.idx  operator.h.9C31D7FF93DA2D34.idx  policy_eval_op.cc.4E3DAFAC704B8778.idx  policy_eval_op.h.7F009F07A40955DE.idx  run_bench.cc.26C8E7EAF64CAEEE.idx  runtime.cc.D5E3E72F3AAB8F9B.idx  runtime.h.9B53E91EFC446FAA.idx  scheduler.h.46D8D59AD67A4203.idx  shuffled_blocks.cc.04B95EDEF57E04BD.idx  static_blocks.cc.838D265EB3B6A6C3.idx  static_blocks.h.D2C9DA1A0935AD79.idx  test_operator_contract.cc.835B18BF3BCBEE65.idx  test_runtime_smoke.cc.20CE770BDEF98416.idx  test_schedulers.cc.8318833F8A9FD59C.idx  types.h.84CEA558648F781F.idx  verify.cc.D4F7630074953EDA.idx
bench/: run_bench.cc
bench/results/: autotune.csv  size_scaling.csv  summary.csv  thread_scaling.csv
cmake/: LTO.cmake  Sanitizers.cmake
docs/: HELIOS_COMPLETE_GUIDE.md  architecture_and_results.md  async_runtime.md  jacobi_and_smoke_test.md  mdp_convergence_analysis.md  phase3_planner.md  runtime_and_async.md  schedulers.md
include/helios/: autotune.h  cost_model.h  mdp.h  mdp_generators.h  operator.h  plan.h  planner.h  policy_eval_op.h  profiling.h  runtime.h  scheduler.h  types.h
include/helios/schedulers/: ca_topk_gs.h  residual_buckets.h  shuffled_blocks.h  static_blocks.h  topk_gs.h
src/: autotune.cc  cost_model.cc  mdp_generators.cc  planners.cc  runtime.cc
src/ops/: policy_eval_op.cc
src/schedulers/: ca_topk_gs.cc  residual_buckets.cc  shuffled_blocks.cc  static_blocks.cc  static_blocks.h  topk_gs.cc
tests/: test_complex_mdps.cc  test_phase3.cc  test_runtime_smoke.cc  test_schedulers.cc  test_stress.cc
tools/: plot.py
